<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353333"
    tools:context="matruprasadchand.github.matt110110.piggame.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/player2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player1"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottomLogo"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/player1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_btn"
        app:layout_constraintEnd_toStartOf="@+id/player2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_bottomLogo"
        app:srcCompat="@drawable/dice2" />

    <ImageView
        android:id="@+id/pigLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottomLogo"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pig" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_rightLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_leftLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <Button
        android:id="@+id/roll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/roll"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rollBtn_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/localScore_bottom" />

    <TextView
        android:id="@+id/txt_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/init_score"
        android:textColor="#f5deb3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/score_bottom"
        app:layout_constraintEnd_toStartOf="@+id/txt_player2"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="@+id/globalScore_bottom"
        tools:text="0" />

    <TextView
        android:id="@+id/txt_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:text="@string/init_score"
        android:textColor="#f5deb3"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/score_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toEndOf="@+id/txt_player1"
        app:layout_constraintTop_toTopOf="@+id/globalScore_bottom" />

    <TextView
        android:id="@+id/temp_player1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/init_score"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/localScore_bottom"
        app:layout_constraintEnd_toStartOf="@+id/temp_player2"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="@+id/localScores_bottom" />

    <TextView
        android:id="@+id/temp_player2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/init_score"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/localScore_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toEndOf="@+id/temp_player1"
        app:layout_constraintTop_toTopOf="@+id/localScores_bottom" />

    <Button
        android:id="@+id/hold"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/hold"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/holdBtn_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottomLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <android.support.constraint.Guideline
        android:id="@+id/bottom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        android:id="@+id/globalScore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/global"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/globalScore_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="@+id/bottom_btn" />

    <android.support.constraint.Guideline
        android:id="@+id/globalScore_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/score_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <android.support.constraint.Guideline
        android:id="@+id/localScores_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/local"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/localScores_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_rightLogo"
        app:layout_constraintStart_toStartOf="@+id/guideline_leftLogo"
        app:layout_constraintTop_toTopOf="@+id/score_bottom" />

    <android.support.constraint.Guideline
        android:id="@+id/localScore_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <android.support.constraint.Guideline
        android:id="@+id/rollBtn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <android.support.constraint.Guideline
        android:id="@+id/holdBtn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="595dp" />

</android.support.constraint.ConstraintLayout>
